--- a/tests/Core/HerePlatformComponents.Tests.csproj
+++ b/tests/Core/HerePlatformComponents.Tests.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="6.1.0" />
+    <PackageReference Include="bunit" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
