--- a/HerePlatformComponents/HerePlatformComponents.csproj
+++ b/HerePlatformComponents/HerePlatformComponents.csproj
@@ -6,9 +6,14 @@
 		<LangVersion>latest</LangVersion>
 		<PackageId>BlazorHerePlatform</PackageId>
 		<Version>0.1.0</Version>
+		<Authors>Timm Bremekamp</Authors>
 		<Description>Blazor HERE Platform Maps components</Description>
+		<PackageTags>blazor;here;maps;components;geolocation;routing</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/emuuu/BlazorHerePlatform</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/emuuu/BlazorHerePlatform</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 		<Nullable>enable</Nullable>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
