Set logo as favicon, add to repo root, prepare NuGet icon
SVG favicon for the docs app. Logo SVG in repo root for GitHub.
PackageIcon in csproj pointing to logo.png (needs PNG conversion).

--- a/HerePlatformComponents/HerePlatformComponents.csproj
+++ b/HerePlatformComponents/HerePlatformComponents.csproj
@@ -16,6 +16,7 @@
 		<RepositoryType>git</RepositoryType>
 		<Nullable>enable</Nullable>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>logo.png</PackageIcon>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
@@ -31,6 +32,7 @@
 
 	<ItemGroup>
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="..\logo.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
