Change build step to run in test project directory
The dotnet build step in the CI workflow now runs in the
tests/HerePlatformComponents.Tests directory instead of the
main HerePlatformComponents directory. This aligns the build
step with the test project context.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
           dotnet-version: ${{ matrix.dotnet-version }}
       - run: dotnet restore
       - run: dotnet build -c Release -f ${{ matrix.target-framework }} --no-restore
-        working-directory: HerePlatformComponents
+        working-directory: tests/HerePlatformComponents.Tests
       - run: dotnet test -c Release -f ${{ matrix.target-framework }} --no-build
         working-directory: tests/HerePlatformComponents.Tests
