--- a/HerePlatformComponents/HerePlatformComponents.csproj
+++ b/HerePlatformComponents/HerePlatformComponents.csproj
@@ -15,6 +15,11 @@
 		<RepositoryUrl>https://github.com/emuuu/BlazorHerePlatform</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<Nullable>enable</Nullable>
+		<Copyright>Copyright (c) 2025 Timm Bremekamp</Copyright>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>blazor-here-platform.png</PackageIcon>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -49,6 +54,7 @@
 		<PackageReference Include="Microsoft.JSInterop" Version="8.0.24" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.JSInterop" Version="9.0.13" Condition="'$(TargetFramework)' == 'net9.0'" />
 		<PackageReference Include="Microsoft.JSInterop" Version="10.0.3" Condition="'$(TargetFramework)' == 'net10.0'" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="9.0.2" PrivateAssets="All" />
 		<PackageReference Include="OneOf" Version="3.0.271" />
 	</ItemGroup>
 
