chore: add explicit Deterministic build property

--- a/HerePlatformComponents/HerePlatformComponents.csproj
+++ b/HerePlatformComponents/HerePlatformComponents.csproj
@@ -22,6 +22,7 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>blazor-here-platform.png</PackageIcon>
+		<Deterministic>true</Deterministic>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
 	</PropertyGroup>
