Add HerePlatform.Core project reference to Docs project
Added a project reference to HerePlatform.Core.csproj in BlazorHerePlatform.Docs.csproj, enabling the documentation project to access and use code from the Core project.

--- a/docs/BlazorHerePlatform.Docs/BlazorHerePlatform.Docs.csproj
+++ b/docs/BlazorHerePlatform.Docs/BlazorHerePlatform.Docs.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../HerePlatformComponents/HerePlatformComponents.csproj" />
+    <ProjectReference Include="../../HerePlatform.Core/HerePlatform.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
