--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,16 @@ jobs:
         working-directory: tests/HerePlatformComponents.Tests
       - run: dotnet test -c Release -f ${{ matrix.target-framework }} --no-build
         working-directory: tests/HerePlatformComponents.Tests
+
+  restclient-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 10.0.x
+      - run: dotnet restore
+      - run: dotnet build -c Release -f net10.0 --no-restore
+        working-directory: tests/HerePlatform.RestClient.Tests
+      - run: dotnet test -c Release -f net10.0 --no-build
+        working-directory: tests/HerePlatform.RestClient.Tests
