--- a/.github/workflows/release-restclient.yml
+++ b/.github/workflows/release-restclient.yml
@@ -1,7 +1,7 @@
-name: Release
+name: Release RestClient
 on:
   push:
-    tags: ['v*']
+    tags: ['restclient/v*']
 
 permissions:
   contents: write
@@ -19,12 +19,12 @@ jobs:
             10.0.x
       - run: dotnet restore
       - run: dotnet build -c Release --no-restore
-      - run: dotnet test -c Release --no-build
-        working-directory: tests/HerePlatformComponents.Tests
+      - run: dotnet test -c Release -f net10.0 --no-build
+        working-directory: tests/HerePlatform.RestClient.Tests
       - name: Extract version from tag
-        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+        run: echo "VERSION=${GITHUB_REF_NAME#restclient/v}" >> $GITHUB_ENV
       - name: Pack
-        run: dotnet pack HerePlatformComponents/HerePlatformComponents.csproj -c Release --no-build -p:Version=$VERSION -o ./artifacts
+        run: dotnet pack HerePlatform.RestClient/HerePlatform.RestClient.csproj -c Release --no-build -p:Version=$VERSION -o ./artifacts
       - name: Push to NuGet
         run: |
           dotnet nuget push ./artifacts/*.nupkg --skip-duplicate -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
@@ -33,8 +33,8 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          if [[ "${{ github.ref_name }}" == *"-preview"* ]]; then
-            gh release create ${{ github.ref_name }} ./artifacts/*.nupkg --generate-notes --prerelease
+          if [[ "$VERSION" == *"-preview"* ]]; then
+            gh release create ${{ github.ref_name }} ./artifacts/*.nupkg --generate-notes --prerelease --title "BlazorHerePlatform.RestClient v$VERSION"
           else
-            gh release create ${{ github.ref_name }} ./artifacts/*.nupkg --generate-notes
+            gh release create ${{ github.ref_name }} ./artifacts/*.nupkg --generate-notes --title "BlazorHerePlatform.RestClient v$VERSION"
           fi
