--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,23 @@ jobs:
 
   restclient-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: ['8.0.x', '9.0.x', '10.0.x']
+        include:
+          - dotnet-version: '8.0.x'
+            target-framework: net8.0
+          - dotnet-version: '9.0.x'
+            target-framework: net9.0
+          - dotnet-version: '10.0.x'
+            target-framework: net10.0
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: 10.0.x
+          dotnet-version: ${{ matrix.dotnet-version }}
       - run: dotnet restore
-      - run: dotnet build -c Release -f net10.0 --no-restore
+      - run: dotnet build -c Release -f ${{ matrix.target-framework }} --no-restore
         working-directory: tests/HerePlatform.RestClient.Tests
-      - run: dotnet test -c Release -f net10.0 --no-build
+      - run: dotnet test -c Release -f ${{ matrix.target-framework }} --no-build
         working-directory: tests/HerePlatform.RestClient.Tests
