Rename blazor-here-platform images to here-platform
Rename SVG/PNG files and update all references in source files, csproj
PackageIcon entries, and regenerated static HTML pages.
Also fix stale BlazorHerePlatform.Docs.styles.css reference in index/404.

--- a/HerePlatformComponents/HerePlatformComponents.csproj
+++ b/HerePlatformComponents/HerePlatformComponents.csproj
@@ -8,7 +8,7 @@
 		<PackageTags>blazor;here;maps;components;geolocation;routing</PackageTags>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageIcon>blazor-here-platform.png</PackageIcon>
+		<PackageIcon>here-platform.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -17,7 +17,7 @@
 
 	<ItemGroup>
 		<None Include="..\README.md" Pack="true" PackagePath="\" />
-		<None Include="..\blazor-here-platform.png" Pack="true" PackagePath="\" />
+		<None Include="..\here-platform.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
