--- a/docs/HerePlatform.Docs/Properties/launchSettings.json
+++ b/docs/HerePlatform.Docs/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "BlazorHerePlatform.Docs": {
+    "HerePlatform.Docs": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
