--- a/.github/workflows/release-blazor.yml
+++ b/.github/workflows/release-blazor.yml
@@ -3,38 +3,13 @@ on:
   push:
     tags: ['blazor/v*']
 
-permissions:
-  contents: write
-
 jobs:
   release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-dotnet@v5
-        with:
-          dotnet-version: |
-            8.0.x
-            9.0.x
-            10.0.x
-      - run: dotnet restore
-      - run: dotnet build -c Release --no-restore
-      - run: dotnet test -c Release --no-build
-        working-directory: tests/HerePlatform.Blazor.Tests
-      - name: Extract version from tag
-        run: echo "VERSION=${GITHUB_REF_NAME#blazor/v}" >> $GITHUB_ENV
-      - name: Pack
-        run: dotnet pack HerePlatform.Blazor/HerePlatform.Blazor.csproj -c Release --no-build -p:Version=$VERSION -o ./artifacts
-      - name: Push to NuGet
-        run: |
-          dotnet nuget push ./artifacts/*.nupkg --skip-duplicate -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
-          dotnet nuget push ./artifacts/*.snupkg --skip-duplicate -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
-      - name: Create GitHub Release
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          if [[ "$VERSION" == *"-preview"* ]]; then
-            gh release create ${{ github.ref_name }} ./artifacts/*.nupkg --generate-notes --prerelease --title "HerePlatform.NET v$VERSION"
-          else
-            gh release create ${{ github.ref_name }} ./artifacts/*.nupkg --generate-notes --title "HerePlatform.NET v$VERSION"
-          fi
+    uses: ./.github/workflows/release-package.yml
+    with:
+      package: blazor
+      csproj-path: HerePlatform.Blazor/HerePlatform.Blazor.csproj
+      test-directory: tests/HerePlatform.Blazor.Tests
+      title-prefix: HerePlatform.NET.Blazor
+    secrets:
+      nuget-api-key: ${{ secrets.NUGET_API_KEY }}
