Enable programmatic release workflow triggers via tagging
Added a step in create-release-tag.yml to trigger the appropriate release workflow (blazor or restclient) using gh workflow run after tagging. Also enabled manual workflow_dispatch triggers for release-blazor.yml and release-restclient.yml to support both manual and automated releases.

--- a/.github/workflows/create-release-tag.yml
+++ b/.github/workflows/create-release-tag.yml
@@ -21,6 +21,7 @@ on:
 
 permissions:
   contents: write
+  actions: write
 
 jobs:
   create-tag:
@@ -66,3 +67,9 @@ jobs:
           git tag "${{ steps.tag.outputs.TAG_NAME }}"
           git push origin "${{ steps.tag.outputs.TAG_NAME }}"
           echo "Created and pushed tag: ${{ steps.tag.outputs.TAG_NAME }}"
+      - name: Trigger release workflow
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh workflow run "release-${{ inputs.package }}.yml" --ref "${{ steps.tag.outputs.TAG_NAME }}"
+          echo "Triggered release-${{ inputs.package }}.yml on ${{ steps.tag.outputs.TAG_NAME }}"
