--- a/.github/workflows/release-blazor.yml
+++ b/.github/workflows/release-blazor.yml
@@ -4,6 +4,9 @@ on:
     tags: ['blazor/v*']
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   release:
     uses: ./.github/workflows/release-package.yml
