--- a/HerePlatform.Blazor/HerePlatform.Blazor.csproj
+++ b/HerePlatform.Blazor/HerePlatform.Blazor.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="README.md" Pack="true" PackagePath="\" />
 		<None Include="..\here-platform.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
