--- a/HerePlatform.RestClient/HerePlatform.RestClient.csproj
+++ b/HerePlatform.RestClient/HerePlatform.RestClient.csproj
@@ -12,7 +12,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="README.md" Pack="true" PackagePath="\" />
 		<None Include="..\here-platform.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
